# prompt-router

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: prompts.json
src/prompt_router/: __init__.py  api.py  cli.py  embedding.py  index.py  router.py
tests/: test_api.py  test_cli.py  test_embedding.py  test_index.py  test_router.py
