[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-command-router"
version = "0.1.0"
description = "Route Chinese commands to the closest fixed English prompt."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
local = ["sentence-transformers>=3.0.0"]

[project.scripts]
prompt-router = "prompt_router.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
